added templates for login and signup

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@apollo/client": "^3.0.0",
+    "@aws-amplify/auth": "^4.6.4",
     "apollo-angular": "^4.0.1",
+    "aws-amplify": "^4.3.33",
     "graphql": "^16",
     "markdown-it": "^13.0.1",
     "mixpanel-browser": "^2.45.0",
