added map view for club detail page

--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@apollo/client": "^3.0.0",
+    "@asymmetrik/ngx-leaflet": "^14.0.1",
     "@aws-amplify/auth": "^4.6.4",
+    "@types/mapbox-gl": "^2.7.8",
+    "angular-mapboxgl-directive": "^0.46.0",
     "apollo-angular": "^4.0.1",
     "aws-amplify": "^4.3.33",
     "graphql": "^16",
     "instagram-feed-embed": "^1.0.1",
+    "leaflet": "^1.9.3",
+    "mapbox-gl": "^2.11.0",
     "markdown-it": "^13.0.1",
     "mixpanel-browser": "^2.45.0",
     "moment": "^2.29.4",
