--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "markdown-it": "^13.0.1",
     "mixpanel-browser": "^2.45.0",
     "moment": "^2.29.4",
+    "ngx-google-analytics": "^14.0.1",
     "ngx-markdown": "^14.0.1",
     "ngx-router-animations": "^13.0.0",
     "roboto-fontface": "^0.10.0",
