--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,7 @@
               "rxjs-compat",
               "moment"
             ],
-            "outputPath": "dist/handball-frontend",
+            "outputPath": "dist/handball-frontend/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -109,6 +109,66 @@
             ],
             "scripts": []
           }
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/handball-frontend/server",
+            "main": "server.ts",
+            "tsConfig": "tsconfig.server.json",
+            "inlineStyleLanguage": "scss"
+          },
+          "configurations": {
+            "production": {
+              "outputHashing": "media",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
+            },
+            "development": {
+              "optimization": false,
+              "sourceMap": true,
+              "extractLicenses": false,
+              "vendorChunk": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "configurations": {
+            "development": {
+              "browserTarget": "handball-frontend:build:development",
+              "serverTarget": "handball-frontend:server:development"
+            },
+            "production": {
+              "browserTarget": "handball-frontend:build:production",
+              "serverTarget": "handball-frontend:server:production"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "prerender": {
+          "builder": "@nguniversal/builders:prerender",
+          "options": {
+            "routes": [
+              "/"
+            ]
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "handball-frontend:build:production",
+              "serverTarget": "handball-frontend:server:production"
+            },
+            "development": {
+              "browserTarget": "handball-frontend:build:development",
+              "serverTarget": "handball-frontend:server:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
