--- a/package.json
+++ b/package.json
@@ -6,30 +6,37 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run handball-frontend:serve-ssr",
+    "serve:ssr": "node dist/handball-frontend/server/main.js",
+    "build:ssr": "ng build && ng run handball-frontend:server",
+    "prerender": "ng run handball-frontend:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
+    "@angular/common": "^15.0.4",
+    "@angular/compiler": "^15.0.4",
+    "@angular/core": "^15.0.4",
+    "@angular/forms": "^15.0.4",
+    "@angular/platform-browser": "^15.0.4",
+    "@angular/platform-browser-dynamic": "^15.0.4",
+    "@angular/platform-server": "^15.0.4",
+    "@angular/router": "^15.0.4",
     "@apollo/client": "^3.0.0",
-    "@asymmetrik/ngx-leaflet": "^14.0.1",
-    "@aws-amplify/auth": "^4.6.4",
+    "@asymmetrik/ngx-leaflet": "^15.0.1",
+    "@nguniversal/express-engine": "^15.0.0",
     "@types/mapbox-gl": "^2.7.8",
     "angular-mapboxgl-directive": "^0.46.0",
-    "apollo-angular": "^4.0.1",
-    "aws-amplify": "^4.3.33",
+    "apollo-angular": "^4.1.1",
+    "domino": "^2.1.6",
+    "express": "^4.15.2",
     "graphql": "^16",
     "instagram-feed-embed": "^1.0.1",
     "leaflet": "^1.9.3",
     "mapbox-gl": "^2.11.0",
     "markdown-it": "^13.0.1",
     "mixpanel-browser": "^2.45.0",
+    "mock-browser": "^0.92.14",
     "moment": "^2.29.4",
     "ngx-google-analytics": "^14.0.1",
     "ngx-markdown": "^14.0.1",
@@ -39,10 +46,13 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.5",
-    "@angular/cli": "~14.0.5",
-    "@angular/compiler-cli": "^14.0.0",
+    "@angular-devkit/build-angular": "^15.0.4",
+    "@angular/cli": "~15.0.4",
+    "@angular/compiler-cli": "^15.0.4",
+    "@nguniversal/builders": "^15.0.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.0.0",
+    "@types/node": "^14.15.0",
     "autoprefixer": "^10.4.13",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
@@ -52,6 +62,8 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
-    "typescript": "~4.7.2"
+    "typescript": "~4.8.4",
+    "ws": "^8.11.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
